ops/k8s/production/ingress.example.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: quantx
  namespace: quantx
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: 64m
    nginx.ingress.kubernetes.io/proxy-read-timeout: '1200'
    nginx.ingress.kubernetes.io/proxy-send-timeout: '1200'
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - quantx.example.com
      secretName: quantx-public-tls
  rules:
    - host: quantx.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: gateway
                port:
                  name: http
